--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "node": ">=8.0"
   },
   "dependencies": {
+    "@capacitor/cli": "^2.2.0",
+    "@capacitor/core": "^2.2.0",
     "@nuxtjs/axios": "^5.8.0",
     "nuxt": "^2.10.2"
   },
   "devDependencies": {
-    "@nuxtjs/pwa": "3.0.0-beta.8",
     "@nuxtjs/eslint-config": "^1.1.2",
+    "@nuxtjs/pwa": "3.0.0-beta.8",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
