--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           key: yarn-modules-{{ checksum "yarn.lock" }}
           paths:
             - node_modules
-      - run: yarn build
+      - run: yarn build-spa
       - run: npx cap add android
       - run: npx cap sync
       - restore_cache:
