--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": ">=8.0"
   },
   "dependencies": {
+    "@capacitor/android": "^2.2.0",
     "@capacitor/cli": "^2.2.0",
     "@capacitor/core": "^2.2.0",
     "@nuxtjs/axios": "^5.8.0",
